Signed-off-by: bill lau <bill0019@126.com name=bill lau>

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <div class="container main">
                 <div class="row home">
                     <div id = "index_left" class="col-md-6 left">
-                        <img class="img-responsive img-rabbit" src="assets/images/home.jpg">
+                        <img class="img-responsive img-rabbit" src="assets/images/bill01.jpg">
                     </div>
                     <div id = "index_right" class="col-md-6 text-center right">
                         <div class="logo">
                             <img src="assets/images/logo.png">
-                            <h4>I am rabbit</h4>
+                            <h4>I am Bill</h4>
                         </div>
                         <p class="home-description">
-                            Hi, I am Rabbit, Web developer from michigan, US. I am passionate about design, development and interaction. I really love what I do.
+                            Hi, I am bill, an machine learning engineer from Sun Yat-sen University. I am passionate about machine learning and deeplearning developing works. I really love what I do.
                         </p>
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">About</div>
