Signed-off-by: bill lau <bill0019@126.com name=bill lau>

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                             <h2 class="page-title" text-center>About</h2>
                             <div class="marker">a</div>
                         </div>
-                        <p class='subtitle'>Hi, I am bill. A machine learning engineer from Sun Yat-sen University, based in Guangzhou, China.
+                        <p class='subtitle'>I am bill. A machine learning engineer from Sun Yat-sen University, based in Guangzhou, China.
                         </p>
-                        <p class="info">"This is a personal webpage with a brief introduction about me, a student comes from Sun Yat-sen University. It's a little funny to say that I am a little funny, uh-huh. Some would say, that Taylor Swift's new album, Reputation, is not so good as her previous ones, but I did buy one without a hesitate. And some say that LeBron James is gonna be old and would not play as good as he used to be, but in fact, he still has a strong performance. Jeremy Clarcson was fired by BBC, and he got a nice job in Amazon together with his partners, Richard Hammond and James May, and they start a whole new journey called The Grand Tour. Well, as says above, music, basketball and automobiles are what I love."</p>  
+                        <p class="info">"This is a personal webpage with a brief introduction about me, a student comes from Sun Yat-sen University. It's a little funny to say that I am a little funny, uh-huh. Some would say, that Taylor Swift's new album, Reputation, is not so good as her previous ones, but I did buy one without a hesitate. And some say that LeBron James is gonna be old and would not play as good as he used to be, but in fact, he still has a strong performance. Jeremy Clarcson was fired by BBC, but he got a nice job in Amazon together with his partners, Richard Hammond and James May. In Amazon, they start a whole new TV show called The Grand Tour, similar to the previous Top Gear. Well, as says above, music, basketball and automobiles are what I love."</p>  
                     </div>
                 </div>
 
@@ -112,7 +112,7 @@
                         </div>
                         <p class='subtitle'>This is a selection of my deeplearning development work. I've been involve in many different types of project.
                         </p>
-                        <p class="info">It's a project about using deeplearning method to make a diagnosis of the prostate cancer. Labled pathological images are provided by Beijing Hospital. With a resolution of 10K*10k, those big slides are divided into 256*256 patches, and with a series data augmentation oprations, those patches consist of the data set. Under the fram of Tensorflow, resnet_V2_50 is used to train the model, and at this stage, drop-out strategy is applied to get rid of over-fit, and AdamOptimizer is used in back-propgation. The evaluation results show that, the model gain a accuracy rate of 90.2%, and a recall rate of 84.6%. In post process stage, a heatmap is generated for each test pathological image, which visually show the tumor zone.</p>
+                        <p class="info">It's a project about using deeplearning method to make a diagnosis of the prostate cancer. Labled pathological images are provided by Beijing Hospital. With a resolution of 10K*10k, those big slides are divided into 256*256 patches, and with a series data augmentation oprations, those patches consist of the data set. Under the fram of Tensorflow, resnet_V2_50 is used to train the model, and at this stage, drop-out strategy is applied to get rid of over-fit, and AdamOptimizer is used in back-propgation. The evaluation results show that, the model gain an accuracy rate of 90.2%, and a recall rate of 84.6%. In post process stage, a heatmap is generated for each test pathological image, which visually show the tumor zone.</p>
                     </div>
                 </div>
             
