--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                             <h2 class="page-title" text-center>Work</h2>
                             <div class="marker">w</div>
                         </div>
-                        <p class='subtitle'>This is a selection of my deeplearning development work. I've been involve in many different types of project.
+                        <p class='subtitle'>This is a selection of my deeplearning development work. I've been involved in many different types of project.
                         </p>
-                        <p class="info">It's a project about using deeplearning method to make a diagnosis of the prostate cancer. Labled pathological images are provided by Beijing Hospital. With a resolution of 10K*10k, those big slides are divided into 256*256 patches, and with a series data augmentation oprations, those patches consist of the data set. Under the fram of Tensorflow, resnet_V2_50 is used to train the model, and at this stage, drop-out strategy is applied to get rid of over-fit, and AdamOptimizer is used in back-propgation. The evaluation results show that, the model gain an accuracy rate of 90.2%, and a recall rate of 84.6%. In post process stage, a heatmap is generated for each test pathological image, which visually shows the tumor zone.</p>
+                        <p class="info">It's a project about using deeplearning method to make a diagnosis of the prostate cancer. Labled pathological images are provided by Beijing Hospital. With a resolution of 10K*10k, those big slides are divided into 256*256 patches, and with a series data augmentation oprations, those patches consist of the data set. Under the fram of Tensorflow, resnet_V2_50 is used to train the model, and at this stage, drop-out strategy is applied to get rid of over-fit, and AdamOptimizer is used in back-propgation. The evaluation results show that, the model gain an accuracy rate of 90.2%, and a recall rate of 84.6%. In post process stage, a heatmap is generated for each test pathological image, which visually shows the tumor region.</p>
                     </div>
                 </div>
             
